--- a/app/staff_portal.html
+++ b/app/staff_portal.html
@@ -86,6 +86,7 @@
         Academic Resources
         </span>
         <a class="mdl-navigation__link" href="http://phsc.smartcatalogiq.com/en/current/Catalog-and-Student-Handbook/College-Calendar" target="_blank">Academic Calendar</a>
+		<a class="mdl-navigation__link" href="http://phsc.smartcatalogiq.com/en/current/Catalog-and-Student-Handbook/" target="_blank">Academic Catalog</a>
         <a class="mdl-navigation__link" href="http://collegestore.phsc.edu/?_ga=1.21564731.1887511963.1469449593" target="_blank">Bookstore</a>
         <a class="mdl-navigation__link" href="https://info.phsc.edu/" target="_blank">Course Schedule</a>
         <a class="mdl-navigation__link" href="https://efaculty.phsc.edu" target="_blank">eFaculty</a>
@@ -103,13 +104,15 @@
         </span>
         <a class="mdl-navigation__link" href="https://www.phsc.edu/" target="_blank">Main PHSC Website</a>
         <a class="mdl-navigation__link" href="https://cpnta.phsc.edu/cfrs/english/logon.aspx" target="_blank">myCFRS</a>
+		<a class="mdl-navigation__link" href="https://cp03.classclimatesurveys.com/phsc/" target="_blank">Class Climate Course Evals</a>
         <a class="mdl-navigation__link" href="https://m.phsc.edu" target="_blank">PHSC Mobile</a>
         <a class="mdl-navigation__link" href="https://access.phsc.edu/departments/hr/hr.htm" target="_blank">Human Resources</a>
         <a class="mdl-navigation__link" href="https://phsc.edu/about-phsc/campuses" target="_blank">Campus and Locations</a>
         <a class="mdl-navigation__link" href="https://phsc.edu/about-phsc/events" target="_blank">Events</a>
         <a class="mdl-navigation__link" href="https://phsc.edu/about-phsc/news" target="_blank">PHSC News</a>
         <a class="mdl-navigation__link" href="https://info.phsc.edu/directory" target="_blank">Staff and Faculty Directory</a>
-        <a class="mdl-navigation__link" href="https://phsc.edu/jobs" target="_blank">Jobs</a>
+        <a class="mdl-navigation__link" href="https://phsc.edu/jobs" target="_blank">Jobs at PHSC</a>
+		<a class="mdl-navigation__link" href="https://www.collegecentral.com/pascohernando/" target="_blank">College Central Jobs</a>
         <a class="mdl-navigation__link" href="https://safety.phsc.edu" target="_blank">Safety and Security</a>
       </nav>
     </div>
