--- a/app/student_portal.html
+++ b/app/student_portal.html
@@ -89,6 +89,7 @@
           Academic Resources
           </span>
           <a class="mdl-navigation__link" href="http://phsc.smartcatalogiq.com/en/current/Catalog-and-Student-Handbook/College-Calendar" target="_blank">Academic Calendar</a>
+		  <a class="mdl-navigation__link" href="http://phsc.smartcatalogiq.com/en/current/Catalog-and-Student-Handbook/" target="_blank">Academic Catalog</a>
           <a class="mdl-navigation__link" href="http://collegestore.phsc.edu/?_ga=1.21564731.1887511963.1469449593" target="_blank">Bookstore</a>
           <a class="mdl-navigation__link" href="https://info.phsc.edu/" target="_blank">Course Schedule</a>
           <a class="mdl-navigation__link" href="https://www.floridashines.org/" target="_blank">Florida Shines</a>
